--- a/PAP/app/src/main/res/drawable/button_green_shape_default_rounded.xml
+++ b/PAP/app/src/main/res/drawable/button_green_shape_default_rounded.xml
@@ -3,7 +3,7 @@
 <item android:state_pressed="false" android:state_selected="false">
     <shape android:shape="rectangle">
         <corners android:radius="50dp" />
-        <solid android:color="@color/JLMgreen" />
+        <solid android:color="@color/Braingreen" />
     </shape>
 </item>
 </selector>
