--- a/PAP/app/src/main/res/layout/activity_update_user.xml
+++ b/PAP/app/src/main/res/layout/activity_update_user.xml
@@ -9,7 +9,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="fr.jlm2017.pap.Activities.UpdateUserActivity">
+    tools:context="fr.Brainstorm.pap.Activities.UpdateUserActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
