--- a/PAP/app/src/main/res/layout/tab_check.xml
+++ b/PAP/app/src/main/res/layout/tab_check.xml
@@ -7,7 +7,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="fr.jlm2017.pap.Activities.Main">
+    tools:context="fr.Brainstorm.pap.Activities.Main">
 
     <ScrollView
         android:layout_width="match_parent"
