--- a/PAP/app/src/main/res/layout/tab_map.xml
+++ b/PAP/app/src/main/res/layout/tab_map.xml
@@ -4,7 +4,7 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="fr.jlm2017.pap.Activities.Main"
+    tools:context="fr.Brainstorm.pap.Activities.Main"
     android:paddingBottom="@dimen/activity_vertical_margin_tabbed"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
